add: NavBar style

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
 @font-face {
   font-family: "Panton";
   src: url("/fonts/Panton-Trial-Thin.ttf") format("truetype");
